# webp-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
tests/: test_ffmpeg.py  test_ffmpeg_png.py  test_handler.py
webp_bot/: constants.py  handler.py  image.py  webp_bot.py
webp_bot/converter/: converter.py  ffmpeg_converter.py  image_converter.py
webp_bot/downloader/: dccon_downloader.py  downloader.py  downloader_factory.py  general_downloader.py
